crates/schema/tests/compile_fail/derive_enum_select_validate_url.rs
use nebula_schema::{EnumSelect, Schema};

#[derive(EnumSelect)]
enum Color {
    Red,
}

#[derive(Schema)]
#[allow(dead_code)]
struct Bad {
    #[param(enum_select)]
    #[validate(url)]
    c: Color,
}

fn main() {
    let _ = Bad::schema();
}
